Make jvm config easier to customize (#204)
* Make jvm config easier to customize

* Update k8s versions

* Support 1.30

* Support 1.30

---------

Co-authored-by: Valeriano Manassero <14011549+valeriano-manassero@users.noreply.github.com>